assets/css/style.css
* {
    margin: 0;
    padding: 0;
    border: none;
    box-sizing: border-box;
}

body {
    background: darkslategrey;
    font-family: urbanist;
    color:aliceblue;
}

/*heading */

.heading {
    margin-left: 20px;
    text-align: center;
    font-size: 150%;
}

/* name input */

.nameinput {
    text-align: center;
}

#whatsYourName {
    border-radius: 4px;
}

#usernamebutton {
    background: #fff;
    color: #222;
    font-weight: 500;
    border-radius: 4px;
    cursor: pointer;
    transition: all 0.3s;
}

/* quiz area style */

.app {
    background: #fff;
    width: 90%;
    max-width: 600px;
    margin: 20px auto 0;
    border-radius: 10px;
    padding: 30px;
}

.app h1 {
    color: darkslategrey;
    font-size: 25px;
    font-weight: 600;
    border-bottom: 1px solid #333;
    padding-bottom: 30px;
}

.quiz {
    padding: 20px 0;
}

.quiz h2 {
    font-size: 18px;
    color: darkslategrey;
    font-weight: 600;
}

/* quiz buttons style */

.btn {
    background: #fff;
    color: #222;
    font-weight: 500;
    width: 100%;
    border: 1px solid #222;
    padding: 10px;
    margin: 10px 0;
    text-align: left;
    border-radius: 4px;
    cursor: pointer;
    transition: all 0.3s;
}

.btn:hover:not([disabled]) {
    background: #222;
    color: #fff;
}

.btn:disabled {
    cursor: no-drop;
}

#next-btn {
    background: darkslateblue;
    color: #fff;
    width: 150px;
    border: 0;
    padding: 10px;
    margin: 20px auto 0;
    border-radius: 4px;
    cursor: pointer;
    display: block;
    display: none;
}

.correct {
    background: #568203;
}

.incorrect {
    background: #c94f1b;
}

/*upper photo reel styling */

#photos {
    clear: both;
    line-height: 0;
    max-width: 100%;
    line-height: 0;
    column-count: 5;
    column-gap: 0;
}

#photos > img {
    width: 100%
}

/*lower photo reel styling */

#photoslower {
    clear: both;
    margin-top: 20px;
    line-height: 0;
    max-width: 100%;
    line-height: 0;
    column-count: 5;
    column-gap: 0;
}

#photoslower > img {
    width: 100%;
}

/*footer styling */

.social-networks {
    text-align: center;
}

.social-networks > li {
    display: inline;
}

.social-networks i {
    font-size: 160%;
    margin: 1%;
    padding: 5%;
    color: #ffffff;
}

